2014-04-16 MickeM
 * Added filter functions to documentation
 * Fixed issue with conversion of CheckServiceState #707

2014-04-15 MickeM
 * Fixed issue with aveerages and performance check_pdh #710
 * Fixed issue with converting empty exclude statements for CheckService
 * Fixed issue with check_taskshced and most_recent_run_time

2014-04-xx MickeM
 * Added testcase for powershell scripts #709

2014-03-10 MickeM
 ! 0.4.2 RELEASE
 * Fixed server restarting listeners on errors

2014-03-08 MickeM
 * Added total object to check_files
 * Fixed registry issues

2014-03-06 MickeM
 * Fixed performance config order
 * Fixed external script alias and support for help-csv

2014-03-05 MickeM
 * Fixed crash dump issue
 * Fixed memory leak in NSCA
  
2014-03-04 MickeM
 * Fixed issue with CheckTaskSched and status #702
 * Improved rendering of status #702
 * Added some debug logging to eventlog to help diagnose issues
 * Fixed default crash dump folder config issue

2014-02-23 MickeM
 * Changed so uniq is default for eventlog checks (if no arguments are given)
 * Fixed drives so they are more sensible
 * Added drive_or_id and drive_or_name to configure the default "id" of drives.
 * Fixed so legacy MaxWarn/MinWarn/MaxCrit/MinCrit are treated like >= and <= (which is the original behaviour)
 * Changed so default "help" if invalid syntax is the short version.
 * Removed erronouse logging when shutting down sockets
 * Tweaked console output a bit
 * Fixed check_uptime overflow issue
 
2014-01-25 MickeM
 * Fixed FILEAGE check_nt command #480, #636, #642, #39 (and others)
 * Fixed delayed start issue in check_service #681
 * Fixed not regexp issue #651
 * Fixed default service name
 * Fixed issue with scan-range #683
 * Fixed uptime performance alias (and added unit s) #688
 * Fixed issue with CkeckCPU show-all: #687
 * Fixed issue with check_ping.bat #635
 * Fixed documentation for nsca hostname #690
 * Fixed validation issues with lists #605