@@ -7,3 +7,6 @@
 [submodule "ext/lua-protobuf"]
 	path = ext/lua-protobuf
 	url = https://github.com/mickem/lua-protobuf.git
+[submodule "ext/mongoose-cpp"]
+	path = ext/mongoose-cpp
+	url = https://github.com/Gregwar/mongoose-cpp.git
