@@ -21,6 +21,7 @@ FIND_PACKAGE(OpenSSL)
 FIND_PACKAGE(Boost COMPONENTS system filesystem thread regex date_time program_options python)
 FIND_PACKAGE(Json_Spirit)
 FIND_PACKAGE(Sphinx)
+FIND_PACKAGE(Mongoose)
 
 IF(WIN32)
 	INCLUDE(${BUILD_CMAKE_FOLDER}/wix.cmake)
@@ -101,6 +102,11 @@ IF(SPHINX_FOUND)
 ELSE(SPHINX_FOUND)
 	MESSAGE(STATUS " ! Sphinx /Python documentation framework) not found: SPHINX_DIR=${SPHINX_DIR}")
 ENDIF(SPHINX_FOUND)
+IF(MONGOOSE_FOUND)
+	MESSAGE(STATUS " - Mongoose found in: ${MONGOOSE_INCLUDE_DIR}")
+ELSE(MONGOOSE_FOUND)
+	MESSAGE(STATUS " ! Mongoose not found: MONGOOSE_INCLUDE_DIR=${MONGOOSE_INCLUDE_DIR}")
+ENDIF(MONGOOSE_FOUND)
 
 
 IF(WIN32)
