@@ -1,0 +1,5 @@
+IF(MONGOOSE_FOUND)
+	SET (BUILD_MODULE 1)
+ENDIF(MONGOOSE_FOUND)
+
+
