@@ -1,0 +1,58 @@
+/**************************************************************************
+*   Copyright (C) 2004-2007 by Michael Medin <michael@medin.name>         *
+*                                                                         *
+*   This code is part of NSClient++ - http://trac.nakednuns.org/nscp      *
+*                                                                         *
+*   This program is free software; you can redistribute it and/or modify  *
+*   it under the terms of the GNU General Public License as published by  *
+*   the Free Software Foundation; either version 2 of the License, or     *
+*   (at your option) any later version.                                   *
+*                                                                         *
+*   This program is distributed in the hope that it will be useful,       *
+*   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+*   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
+*   GNU General Public License for more details.                          *
+*                                                                         *
+*   You should have received a copy of the GNU General Public License     *
+*   along with this program; if not, write to the                         *
+*   Free Software Foundation, Inc.,                                       *
+*   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
+***************************************************************************/
+#pragma once
+
+#ifdef WINDOWS
+#define WIN32_LEAN_AND_MEAN
+include <Windows.h>
+#endif
+
+#include <string>
+#include <functional>
+#include <map>
+#include <vector>
+
+#include <boost/thread.hpp>
+#include <boost/bind.hpp>
+#include <boost/shared_ptr.hpp>
+#include <boost/array.hpp>
+#include <boost/asio.hpp>
+#include <boost/optional.hpp>
+#include <boost/bind.hpp>
+#include <boost/logic/tribool.hpp>
+#include <boost/utility.hpp>
+#include <boost/tuple/tuple.hpp>
+
+#include <boost/filesystem.hpp>
+
+#ifdef USE_SSL
+#include <boost/asio/ssl.hpp>
+#endif
+
+#include <common.hpp>
+#include <strEx.h>
+#include <utils.h>
+
+#include <types.hpp>
+#include <NSCAPI.h>
+#include <nscapi/plugin.hpp>
+#include <nrpe/packet.hpp>
+
