@@ -1,3 +1,6 @@
+2014-04-23 MickeM
+ * Added initial WebServer module
+
 2014-04-16 MickeM
  * Added filter functions to documentation
  * Fixed issue with conversion of CheckServiceState #707
